--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "fzaninotto/faker": "^1.9",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "mll-lab/laravel-graphql-playground": "^2.4",
+        "nuwave/lighthouse": "^4.18"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
