--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /public/src/video
+# /public/src/img/portfolio
+# /public/src/img/profile
+# /public/src/img/thumbnails
